Modificações feitas para melhoria do site através das técnicas de CSS

--- a/semana1/sistema-loja/sistemaInterno.html
+++ b/semana1/sistema-loja/sistemaInterno.html
@@ -3,31 +3,43 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="sistema-loja.css">
     <title>Página Inicial</title>
 </head>
 
-<body style="background-color: gray">
+<body>
 
-    <h1 id= empresa style="background: yellow; text-align: center">PELA DEMOCRACIA</h1>
-    <h2 id= frase style="background: rgb(207, 134, 207); text-align: center">Vista essa Camisa!</h2>
-    <h4 style="background: white; text-align: center;"> Bem-vind@ querid@ democrata! O ato de consumo pode ser também um ato de resistência e por isso  
-        vendemos camisas que contêm verdades poderosas! Esperamos que elas possam ser enunciadas através de você! </h4>
-       
-    <div style="background-color:#769EE4; width: 15vw; height: 6vw; text-align: center;" ><b><u>MENU</u></b>
+    <div id="heading">
+        <p id=title>PELA DEMOCRACIA</p>
+        <p id=sub>Vista essa Camisa!</p>
     </div>
 
-    <div style="background-color:#769EE4; width: 15vw; height: 15vw; text-align: left;">
-       <a href="sistemainternoCTRL.html">Controle de Estoque</a> 
-       <br>
-       <br>
-       <a href="sistemaInternoADD.html">Adicionar Produto</a>
-       <br>
-       <br>
-       <a href="sistemaInternoFunc.html">Funcionários</a>
-       <br>
-       <br>
+    <div id=menu>
+        <a href="sistemainternoCTRL.html" id="ctrl">Controle de Estoque</a>
+        <a href="sistemaInternoADD.html" id="add">Adicionar Produto</a>
+        <a href="sistemaInternoFunc.html" id="func">Funcionários</a>
+        <a href="" id="perfil">Seu Perfil</a>
+        <a href="" id="sair">Sair</a>
     </div>
-    
+
+    <div id="msg"> 
+        <p>Bem-vind@ querid@
+            <br>
+            democrata!</p>
+            <br>
+        <p id=ltl> Navegue tranquil@ pelo nosso
+            <br>
+            site administrativo!</p>
+    </div>
+
+
+    <footer id="foot">
+        <div id="foot-content">
+            <p><b>Dúvidas? Ligue! Mande uma mensagem!</b></p>
+            tel: (31) 98474-9348; e-mail: pelademocracia@omg.br
+            <br>
+            Atendimento de segunda à sexta das 8h às 17h.
+    </footer>
 
 
 </body>
