--- a/semana2/bugfixes/comprar.html
+++ b/semana2/bugfixes/comprar.html
@@ -14,7 +14,7 @@
     <div class="container-do-search">
         <div>
             <input type="text">
-            <img src="https://static.thenounproject.com/png/105498-200.png" class="icone" alt="Buscar">
+            <img src="https://lh3.googleusercontent.com/proxy/gQO6szpeKpejhcHXPynBOEWJcf0JQCEGv2XV-vphZihKTOtavNTsC2toE-2jd-lglMuQCE5EJHPQn3i66sPttlvYk0AjKQrgEfz-Fq0-vh1jh1Rkwfx4nuj_" class="icone" alt="Buscar">
         </div>
     </div>
     <div id=compra>
