12. lista numerada aparecendo através do uso de uma seção div nomeada colocando os elementos em display inline-block

--- a/semana2/bugfixes/home.html
+++ b/semana2/bugfixes/home.html
@@ -15,10 +15,12 @@
     <div>
         <div class="container" id="container-de-descricao">
             <span> Somos uma empresa focada</span> <span>em tornar a compra de</span> <span>roupas mais fácil</span></p>
+            <div id=lista>
             <ol>
-                <li> Ache os melhores descontos </li>
+                <li>Ache os melhores descontos</li>
                 <li> Busque pelos seus gostos</li>
             </ol>
+            </div>
             <h3> Realize seus sonhos conosco</h3>
         </div>
 
