--- a/semana4/planner/tarefa.html
+++ b/semana4/planner/tarefa.html
@@ -24,49 +24,50 @@
             <option>Domingo</option>
         </select>
         <button type="button" id="add" onclick="inserirTarefa()">Adicionar</button>
+        <button type="button" id="limpar" onclick="limparTudo()">Limpar Planner</button>
     </nav>
 
     <main>
         <div id="container">
 
-                <div>
+                <div id=limpador>
                     <p> Segunda-feira </p>
-                    <ul id="segunda"></ul>
+                    <ul class="lista" id="segunda"></ul>
 
                 </div>
-                <div >
+                <div id=limpador >
                     <p> Terça-feira </p>
-                    <ul id="terça"></ul>
+                    <ul class="lista" id="terça"></ul>
 
 
                 </div >
-                <div>
+                <div id=limpador>
                     <p> Quarta-feira </p>
-                    <ul id="quarta"></ul>
+                    <ul class="lista" id="quarta"></ul>
 
 
                 </div>
-                <div>
+                <div id=limpador>
                     <p> Quinta-feira </p>
-                    <ul  id="quinta"></ul>
+                    <ul class="lista"  id="quinta"></ul>
 
 
                 </div >
-                <div>
+                <div id=limpador>
                     <p> Sexta-feira </p>
-                    <ul id="sexta"></ul>
+                    <ul class="lista" id="sexta"></ul>
 
 
                 </div >
-                <div>
+                <div id=limpador>
                     <p> Sábado </p>
-                    <ul id="sabado"></ul>
+                    <ul class="lista" id="sabado"></ul>
 
 
                 </div >
-                <div>
+                <div id=limpador>
                     <p> Domingo </p>
-                    <ul id="domingo"></ul>
+                    <ul class="lista" id="domingo"></ul>
 
 
                 </div>
