exercicio 4 funções de array

--- a/semana4/lista-de-exercicios/index.html
+++ b/semana4/lista-de-exercicios/index.html
@@ -7,8 +7,11 @@
     <link href="" type="text/css" rel="stylesheet" />
     <title>Document</title>
 </head>
-<body>
+<body onload="imprimirNoDiv()">
 
+    <div id="container">
+
+    </div>
 
 </body>
 </html> 
