exercicio 5. Fim das atividades

--- a/semana4/lista-de-exercicios/index.html
+++ b/semana4/lista-de-exercicios/index.html
@@ -7,7 +7,7 @@
     <link href="" type="text/css" rel="stylesheet" />
     <title>Document</title>
 </head>
-<body onload="imprimirNoDiv()">
+<body >
 
     <div id="container">
 
